# bl808_rust_playground

./: Cargo.toml  build.rs  readme.md
bl616-blinky/: Cargo.toml  memory.x  readme.md
bl616-blinky/src/: main.rs
bl808-blinky/: Cargo.toml
bl808-blinky-ram-gdb/: Cargo.toml  build.rs  memory.x  readme.md
bl808-blinky-ram-gdb/.cargo/: config.toml
bl808-blinky-ram-gdb/src/: main.rs
bl808-blinky/src/: main.rs
bl808-clocks/: Cargo.toml  readme.md
bl808-clocks/src/: main.rs
bl808-d0-blinky/: Cargo.toml  memory.x  readme.md
bl808-d0-blinky/src/: main.rs
bl808-data/: Cargo.toml  readme.md  regen.sh  validate.sh
bl808-data/sources/headers/: glb_basic.h
bl808-data/src/: lib.rs  main.rs  parser.rs  svd_fragments.rs
bl808-experiments/: Cargo.toml  readme.md
bl808-experiments/src/: lib.rs
bl808-multiboot/: Cargo.toml  memory.x  readme.md
bl808-multiboot/src/: main.rs
bl808-rom-wrapper/: Cargo.toml  README.md  regen.sh
bl808-rom-wrapper/c_defines/: README.md  bl808_aon.h  bl808_aon_stub.h  bl808_ef_ctrl.h  bl808_glb.h  bl808_glb_gpio.h  bl808_gpio.h  bl808_hbn.h  bl808_l1c.h  bl808_pds.h  bl808_romapi_e907.c  bl808_romdriver_e907.h  bl808_sf_ctrl.h  bl808_sflash.h  bl808_uart.h  bodge.h  misc.h  typedefs.h
bl808-rom-wrapper/src/: lib.rs  rom.rs  rom_table.rs  types.rs
bl808-rom-wrapper/src/rom/: glb.rs
bl808-rom-wrapper/src/rom_table/: constants.rs  rom_lookup.rs
bl808-rom-wrapper/src/types/: bl808_aon.rs  bl808_ef_ctrl.rs  bl808_glb.rs  bl808_glb_gpio.rs  bl808_hbn.rs  bl808_pds.rs  bl808_sflash.rs  misc.rs
src/: main.rs
