[package]
name = "bl808-multiboot"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
riscv = "0.10.0"
bl808-pac = { git = "https://github.com/9names/bl808-pac", branch = "alt" }
embedded-hal = { version="0.2.7", features = ["unproven"] }
panic-halt = "0.2.0"
riscv-rt = "0.11.0"


[build-dependencies]
riscv-target = "0.1.2"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 1
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 1
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
